force-app/main/default/objects/Loan__c/fields/Balance_of_the_Loan__c.field-meta.xml
<CustomField>
    <fullName>Balance_of_the_Loan__c</fullName>
    <formula>IF(
Total_Charges_on_the_Loan__c = null,
Gross_Loan_Amount__c,
Total_Charges_on_the_Loan__c + Gross_Loan_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>