force-app/main/default/objects/Loan__c/fields/Date_Loan_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Loan_Issued__c</fullName>
    <label>Loan Issue Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>