force-app/main/default/objects/Loan__c/fields/Total_Charges_on_the_Loan__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges_on_the_Loan__c</fullName>
    <label>Total Charges on Loan</label>
    <summarizedField>Loan_Charge__c.Amount__c</summarizedField>
    <summaryForeignKey>Loan_Charge__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>