force-app/main/default/objects/Loan__c/recordTypes/Default_Loan_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Default_Loan_Record_Type</fullName>
    <active>true</active>
    <label>Default Loan Record Type</label>
</RecordType>