force-app/main/default/objects/Loan__c/validationRules/LoanAmountCanNotBeNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>LoanAmountCanNotBeNegative</fullName>
    <active>true</active>
    <description>Prevents the entry of Loan values under 0.</description>
    <errorConditionFormula>If(Gross_Loan_Amount__c &lt;= 0, true,false)</errorConditionFormula>
    <errorDisplayField>Gross_Loan_Amount__c</errorDisplayField>
    <errorMessage>A Loan must have at least some positive nominal value assigned to it.</errorMessage>
</ValidationRule>